[gd_scene load_steps=6 format=3 uid="uid://dejandhh0jf4a"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_d0nv3"]
[ext_resource type="Texture2D" uid="uid://dne2sfo5khndt" path="res://Sprites/main_menu_button.png" id="2_5exnf"]
[ext_resource type="Texture2D" uid="uid://dsswvwkhqfo7k" path="res://Sprites/resume_button.png" id="3_mp64h"]
[ext_resource type="Texture2D" uid="uid://ckxhynrtr11un" path="res://Sprites/retry_button.png" id="4_lpt7p"]
[ext_resource type="FontFile" uid="uid://cjqqgsl2ndjdl" path="res://Fonts/pcsenior.ttf" id="5_w4a1g"]

[node name="Pause_menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_d0nv3")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.490196)

[node name="homeButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 720.0
offset_top = 700.0
offset_right = 738.0
offset_bottom = 718.0
scale = Vector2(10, 10)
pivot_offset = Vector2(9, 9)
texture_normal = ExtResource("2_5exnf")
stretch_mode = 3

[node name="resumeButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 960.0
offset_top = 700.0
offset_right = 978.0
offset_bottom = 718.0
scale = Vector2(10, 10)
pivot_offset = Vector2(9, 9)
texture_normal = ExtResource("3_mp64h")
stretch_mode = 3

[node name="retryButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 1200.0
offset_top = 700.0
offset_right = 1218.0
offset_bottom = 718.0
scale = Vector2(10, 10)
pivot_offset = Vector2(9, 9)
texture_normal = ExtResource("4_lpt7p")
stretch_mode = 3

[node name="currentPlayerScoreBackground" type="Label" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = 592.0
offset_top = 211.5
offset_right = 1342.0
offset_bottom = 267.5
pivot_offset = Vector2(68, 0.5)
theme_override_colors/font_color = Color(0.368627, 0.317647, 0.403922, 1)
theme_override_fonts/font = ExtResource("5_w4a1g")
theme_override_font_sizes/font_size = 50
text = "Current Sore: 0"
horizontal_alignment = 1

[node name="currentPlayerScore" type="Label" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = 587.0
offset_top = 209.0
offset_right = 1337.0
offset_bottom = 265.0
pivot_offset = Vector2(73, 3)
theme_override_colors/font_color = Color(0.498039, 0.439216, 0.541176, 1)
theme_override_fonts/font = ExtResource("5_w4a1g")
theme_override_font_sizes/font_size = 50
text = "Current Sore: 0"
horizontal_alignment = 1

[node name="highscoreBackground" type="Label" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = 592.0
offset_top = 357.5
offset_right = 1342.0
offset_bottom = 413.5
pivot_offset = Vector2(68, 0.5)
theme_override_colors/font_color = Color(0.368627, 0.317647, 0.403922, 1)
theme_override_fonts/font = ExtResource("5_w4a1g")
theme_override_font_sizes/font_size = 50
text = "Highscore: 0"
horizontal_alignment = 1

[node name="highscore" type="Label" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = 587.0
offset_top = 355.0
offset_right = 1337.0
offset_bottom = 411.0
pivot_offset = Vector2(73, 3)
theme_override_colors/font_color = Color(0.498039, 0.439216, 0.541176, 1)
theme_override_fonts/font = ExtResource("5_w4a1g")
theme_override_font_sizes/font_size = 50
text = "Highscore: 0"
horizontal_alignment = 1

[connection signal="pressed" from="homeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="retryButton" to="." method="_on_retry_button_pressed"]
